# docstratum

./: .env.example  .gitignore  CHANGELOG.md  DocStratum_v0.0.7_Migration_Report.docx  README.md  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt
docs/design/: RR-ROADMAP-validator-v0.0.1-to-v1.0.0.md  prompt.md
docs/design/00-meta/: RR-META-asot-implementation-strategy.md  RR-META-asot-progress-report.md  RR-META-documentation-backlog.md  RR-META-llms-txt-architect.md  RR-META-specs.md  RR-META-weight-ratification-proposal.md
docs/design/01-research/: RR-SPEC-v0.0.1-specification-deep-dive.md  RR-SPEC-v0.0.1a-formal-grammar-and-parsing-rules.md  RR-SPEC-v0.0.3d-gap-analysis-and-opportunity-map.md  RR-SPEC-v0.0.5-requirements-definition.md  RR-SPEC-v0.0.5-summary.md  RR-SPEC-v0.0.5a-functional-requirements-specification.md  RR-SPEC-v0.0.5b-non-functional-requirements-and-constraints.md  RR-SPEC-v0.0.5c-scope-definition-and-out-of-scope-registry.md  RR-SPEC-v0.0.5d-success-criteria-and-mvp-definition.md  RR-SPEC-v0.0.6-platinum-standard-definition.md  RR-SPEC-v0.0.7-ecosystem-pivot-specification.md  RR-SPEC-v0.0.x-consolidated-research-synthesis.md
docs/design/02-foundation/: RR-SPEC-v0.1.0-project-foundation.md  (+14 more)
src/docstratum/: __init__.py  logging_config.py
tests/: __init__.py  test_classification.py  test_constants.py  test_diagnostics.py  test_ecosystem.py  test_enrichment.py  test_parsed.py  test_parser_classifier.py  test_parser_edge_cases.py  test_parser_fixtures.py  test_parser_integration.py  test_parser_io.py  test_parser_metadata.py  test_parser_populator.py  test_parser_section_matcher.py  test_parser_specimens.py  test_parser_tokenizer.py  test_pipeline.py  test_pipeline_integration.py  test_quality.py  test_validation.py
tests/fixtures/: .gitkeep
(+324 files in other folders)
